[metadata]
# This includes the license file in the wheel.
license_files = LICENSE

[bdist_wheel]
universal = 1

[nosetests]
logging-clear-handlers=true
with-coverage=true
cover-package=bonked
cover-erase=true

[flake8]
ignore = E203, E266, E501, W503
exclude=./tests/*
max-line-length = 80
max-complexity = 18
select = B,C,E,F,W,T4,B9

[mypy]
ignore_missing_imports = true
